Add Telenor as sponsor + some village info(not on web site yet)

--- a/_data/sponsors.yml
+++ b/_data/sponsors.yml
@@ -8,6 +8,9 @@
     - logo: defendable.svg
       name: Defendable
       url: https://www.defendable.no/
+    - logo: telenor.svg
+      name: Telenor
+      url: https://www.telenor.no/
 - type: Silver
   sponsors:
     - logo: gurusoft.png
