--- a/_data/villages.yml
+++ b/_data/villages.yml
@@ -1,4 +1,9 @@
 - name: Lockpick village
-  description: Participants can explore the vulnerabilities of different locking devices, learn techniques to exploit these weaknesses, and practice hands-on with locks of varying difficulty levels.\n\nParticipants can visit the village during the conference for an introduction to lock picking, along with hands-on practice with a variety of locks.\n\nThis workshop is hosted by Semaphore.
+  description: |
+    <p>Participants can explore the vulnerabilities of different locking devices, learn techniques to exploit these weaknesses, and practice hands-on with locks of varying difficulty levels.</p>
+    <p>Participants can visit the village during the conference for an introduction to lock picking, along with hands-on practice with a variety of locks.</p>
+    <p>This workshop is hosted by Semaphore.</p>
 - name: Hardware hacking village
-  description: TBA. This workshop is hosted by Telenor and Crosspoint Labs.
+  description: |
+    <p>At the hardware hacking village, you'll get hands-on with a range of real-world hacking techniques. Try your hand at intercepting HTTPS traffic, messing with malicious USB cables, and cloning NFC access cards. You can also experiment with Faraday sleeves, reveal PIN codes using a thermal camera, and learn how to start hacking security cameras. If you're into hardware, there's even an introduction to fault injection attacks on microcontrollers. Whether you're just curios or already deep into hacking, there's plenty to explore and learn.</p>
+    <p>This workshop is hosted by Telenor and Crosspoint Labs.</p>
