Add breakfast and registration

--- a/_data/program.yml
+++ b/_data/program.yml
@@ -1,3 +1,6 @@
+- timeStart: "08:30"
+  timeEnd: "08:55"
+  title: Registration and breakfast
 - timeStart: "08:55"
   timeEnd: "09:00"
   title: Intro
