Updated with hallvard as keynote

--- a/_data/program.yml
+++ b/_data/program.yml
@@ -6,7 +6,7 @@
   title: Intro
 - timeStart: "09:00"
   timeEnd: "09:45"
-  talk: patricia
+  talk: hallvard
 - timeStart: "09:45"
   timeEnd: "10:30"
   talk: morten
