Add Hackeriet as host for the HW village

--- a/_data/villages.yml
+++ b/_data/villages.yml
@@ -9,4 +9,4 @@
   description: |
     At the hardware hacking village, you'll get hands-on with a range of real-world hacking techniques. Try your hand at intercepting HTTPS traffic, messing with malicious USB cables, and cloning NFC access cards. You can also experiment with Faraday sleeves, reveal PIN codes using a thermal camera, and learn how to start hacking security cameras. If you're into hardware, there's even an introduction to fault injection attacks on microcontrollers. Whether you're just curios or already deep into hacking, there's plenty to explore and learn.
     
-    This village is hosted by <span class="company">Telenor</span> and <span class="company">Crosspoint Labs</span>.
+    This village is hosted by <span class="company">Telenor</span>, <span class="company">Hackeriet</span>, and <span class="company">Crosspoint Labs</span>.
